Added: Services, Team memebers, Time line.

--- a/_config.yml
+++ b/_config.yml
@@ -9,56 +9,50 @@ description: "Write an awesome description for your new site here. You can edit 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: محمد تسلیمی
   pic: 1
-  position: Lead Designer
   social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: stack-overflow
-      url: #
+    - title: linkedin
+      url: https://www.linkedin.com/in/mohammad-taslimi/
+    - title: github
+      url: https://github.com/MoTa2380
 
-- name: Larry Parker
+
+- name: محمدمهدی نوروزی
   pic: 2
-  position: Lead Marketer
   social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
     - title: linkedin
       url: #
+    - title: github
+      url: #
 
-- name: Diana Petersen
+- name: محمدجواد نوروزی
   pic: 3
-  position: Lead Developer
   social:
-    - title: twitter
+    - title: linkedin
       url: #
-    - title: facebook
+    - title: github
       url: #
-    - title: google-plus
+
+- name: محمدحسین مومنی
+  pic: 4
+  social:
+    - title: linkedin
+      url: #
+    - title: github
       url: #
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
+  - title: linkedin
     url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
   - title: github
     url: http://github.com/jekyll
 
 # Postal address (add as many lines as necessary)
-address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+# address:
+#   - line: 3481 Melrose Place
+#   - line: Beverly Hills, CA 90210
 
 # Build settings
 markdown: kramdown
